refactor: rewrite services to hooks (#319)
