# packages/api/src/openapi.json
@@ -659,6 +659,14 @@
             "schema": {
               "type": "string"
             }
+          },
+          {
+            "name": "state",
+            "in": "query",
+            "description": "The state to return to the client after authentication.",
+            "schema": {
+              "type": "string"
+            }
           }
         ],
         "responses": {
